--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "animate.css": "^3.7.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "wow.js": "^1.2.2"
   }
 }
