--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "jquery": "^3.3.1",
+    "owl.carousel": "^2.3.4",
     "wow.js": "^1.2.2"
   }
 }
